<resources>
    <string name="app_name">GpsTrackeriTer</string>
    <string name="logo">iTer</string>
    <string name="ic_home">Home</string>
    <string name="ic_routes">Routes</string>
    <string name="ic_settings">Settings</string>
    <string name="location_settings">Location</string>
    <string name="settings_account">Account</string>
    <string name="settings_logout_key">logout_key</string>
    <string name="settings_logout_title">Logout</string>
    <string name="settings_logout_message">click to logout</string>
    <string name="update_time">Update time</string>
    <string name="route_color">Route color</string>
    <string name="update_time_summary">Location update time</string>
    <string name="route_color_summary">Select route color</string>
    <string name="update_time_key">update_time_key</string>
    <string name="route_color_key">route_color_key</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="request_permission_title">Permission request</string>
    <string name="request_permission_message">Location permission is required to display your route.</string>
    <string name="save_route_dialog_title">Save this route?</string>
    <string name="delete_route_dialog_title">Delete this route?</string>
    <string name="save_route_dialog_message">Route information:\nTime: %1$s\nAverage speed: %2$s km/h\nDistance: %3$s m</string>
    <string name="delete_route_dialog_message">Confirm deletion of the route</string>
    <string name="check_internet_message">Internet is not available, check your connection!</string>
    <string name="snackbar_gps_message">GPS is disabled, enable in settings</string>
    <string name="snackbar_gps_action">Open settings</string>
    <string name="btn_my_location">Current location</string>
    <string name="btn_show_route">Show route</string>
    <string name="btn_control_route">Control route</string>
    <string name="route_date">Date: %1$s</string>
    <string name="start_timer">Time: 00:00:00</string>
    <string name="start_distance">Distance: 0 m</string>
    <string name="start_speed">Speed: 0 km/h</string>
    <string name="start_averageSpeed">Average speed: 0 km/h</string>
    <string name="tv_timer">Time: %1$s</string>
    <string name="tv_speed">Speed: %1$s km/h</string>
    <string name="tv_averageSpeed">Average speed: %1$s km/h</string>
    <string name="tv_distance">Distance: %1$s m</string>
    <string name="save_route_success">Route was saved</string>
    <string name="registration_success">Account was created</string>
    <string name="login_success">Login successful</string>
    <string name="delete_route_success">Route was deleted</string>
    <string name="ic_speed">ic speed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="log_in_screen_button">Log-in</string>
    <string name="signup_screen_button">SignUp</string>
    <string name="confirm_password_field">Confirm password</string>
    <string name="error_message_password">length must be from 6 to 50, at least one capital and small letter, number, sign</string>
    <string name="error_message_conf_password">The passwords do not match</string>
    <string name="error_message_email">Check the correctness of the email</string>
    <string name="error_empty_field">Field can not be empty</string>

</resources>