<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/location_settings">
        <ListPreference
            android:defaultValue="3000"
            android:entries="@array/loc_time_update_name"
            android:entryValues="@array/loc_time_update_mls"
            android:icon="@drawable/ic_update_time"
            android:key="@string/update_time_key"
            android:summary="@string/update_time_summary"
            android:title="@string/update_time" />

        <ListPreference
            android:defaultValue="#FF2196F3"
            android:entries="@array/color_name"
            android:entryValues="@array/color_values"
            android:icon="@drawable/ic_circle"
            android:key="@string/route_color_key"
            android:summary="@string/route_color_summary"
            android:title="@string/route_color" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_account">
        <Preference
            android:key="@string/settings_logout_key"
            android:summary="@string/settings_logout_message"
            android:title="@string/settings_logout_title" />
    </PreferenceCategory>

</PreferenceScreen>